feat: add pagination

--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,5 @@ yarn-error.log*
 # Uncomment the next line if you want to ignore all CSV files
 # *.csv
 # Or specify particular CSV files to ignore
-/public/words.csv
+/public/*.csv
 # Add other specific CSV files as needed
