--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -29,3 +30,8 @@ yarn-error.log*
 # Or specify particular CSV files to ignore
 /public/*.csv
 # Add other specific CSV files as needed
+
+/backend/.env
+/backend/.venv
+/backend/__pycache__
+
