refactor: Migrate to Next.js App Router and CSS Modules
- Migration from React Router to Next.js App Router. Removed React Router dependencies and components
- Migrated to CSS Modules for components
- Addede ClientLayout.tsx

--- a/.gitignore
+++ b/.gitignore
@@ -32,10 +32,6 @@ yarn-error.log*
 /public/*.csv
 # Add other specific CSV files as needed
 
-/backend/.env
-/backend/.venv
-/backend/__pycache__
-/backend/*.csv
-/backend/details
-/src/app/api/test-db/*.ts
+/backend
+/src/app/api/test-db
 /scripts
