--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "next": "^15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.5.2",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^7.6.0",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^5.0.1"
   },
   "scripts": {
     "dev": "next dev -p 3010",
