--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "web-vitals": "^5.0.1"
   },
   "scripts": {
-    "dev": "next dev -p 3010",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
